Update JUnit.java